# sementic_text_similarity

./: EDA.ipynb  README.md  inference.py  pyproject.toml  requirements.txt  train.py
code/: app.py  inference_many.py  inference_one.py  train.py
code/data/: data_module.py
code/models/: model.py
data/: data_module.py
models/: model.py
