[tool.poetry]
name = "sementic-text-similarity"
version = "0.1.0"
description = ""
authors = ["wooy0ng <yygg9800@naver.com>"]
readme = "README.md"
packages = [{include = "sementic_text_similarity"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
pytorch-lightning = "^2.0.1"
pandas = "^1.5.3"
transformers = "^4.27.4"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
